--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/MenuPartial.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/MenuPartial.cshtml
@@ -18,7 +18,7 @@
                                         {
                                             if (item.Key != null)
                                             {
-                                                <li><a href="products.html">@item.Key.TenNSX</a></li>
+                                                <li><a href="@Url.Action("SanPham","SanPham",new {@MaLoaiSP=groupitem.Key.MaLoaiSP,@MaNSX=item.Key.MaNSX })">@item.Key.TenNSX</a></li>
                                             }
                                         }
                                     </ul>
