--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Bán Laptop Uy Tín Nguyễn Hoàng</title>
+    <title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Signle :: w3layouts</title>
     <link href="~/Content/trangweb/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="~/Content/trangweb/js/jquery.min.js"></script>
@@ -26,7 +26,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- start menu -->
     <link href="~/Content/trangweb/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="~/Content/trangweb/js/memenu.js"></script>
-    <script>$(document).ready(function () { $(".memenu").memenu(); });</script>
+    <script>$(document).ready(function(){$(".memenu").memenu();});</script>
+
+
+    <script src="~/Content/trangweb/js/main.js"></script>
     <script src="~/Content/trangweb/js/simpleCart.min.js"></script>
 </head>
 <body>
@@ -42,8 +45,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <div class="header-left">
                     <ul>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="register.html">Register</a></li>
+                        <li><a class="lock" href="login.html">Login</a></li>
+                        <li><a class="lock" href="register.html">Register</a></li>
+                        <li>
+                        </li>
 
                     </ul>
                     <div class="cart box_1">
@@ -52,7 +57,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="total">
                                     <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
                                 </div>
-                                <img src="images/cart.png" alt="" />
+                                <img src="~/Content/trangweb/images/cart.png" alt="" />
                             </h3>
                         </a>
                         <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
@@ -66,33 +71,101 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="head-top">
                 <div class="logo">
-                    <a href="@Url.Action("Index","Home")"><img src="~/Content/trangweb/images/logo.png" /></a>
+                    <a href="@Url.Action("Index","Home")"><img src="~/Content/trangweb/images/logo.png" alt=""></a>
                 </div>
-                @Html.Action("MenuPartial", "Home")
+                @Html.Action("MenuPartial","Home")
                 <div class="clearfix"> </div>
             </div>
         </div>
-    </div>
 
-    <div class="banner">
+    </div>
+    <!--content-->
+    <!---->
+    <div class="product">
         <div class="container">
-            <script src="~/Content/trangweb/responsiveslides.min.js"></script>
-            <script>
-                $(function () {
-                    $("#slider").responsiveSlides({
-                        auto: true,
-                        nav: true,
-                        speed: 500,
-                        namespace: "callbacks",
-                        pager: true,
-                    });
-                });
-            </script>
+            <div class="col-md-3 product-price">
+
+                <div class=" rsidebar span_1_of_left">
+                    <div class="of-left">
+                        <h3 class="cate">Danh Mục Sản Phẩm</h3>
+                    </div>
+                    <ul class="menu">
+                        <li class="item1">
+                            <a href="#">Laptop Dell </a>
+                            <ul class="cute">
+                                <li class="subitem1"><a href="@Url.Action()">Dell Latitude </a></li>
+                                <li class="subitem2"><a href="#">Dell Precision </a></li>
+                                <li class="subitem3"><a href="#">Dell Inspiron </a></li>
+                            </ul>
+                        </li>
+                        <li class="item2">
+                            <a href="#">Laptop HP </a>
+                            <ul class="cute">
+                                <li class="subitem1"><a href="#">HP EliteBook </a></li>
+                                <li class="subitem2"><a href="#">HP Probook </a></li>
+                                <li class="subitem3"><a href="#">HP Zbook</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!--initiate accordion-->
+                <script type="text/javascript">
+			$(function() {
+			    var menu_ul = $('.menu > li > ul'),
+			           menu_a  = $('.menu > li > a');
+			    menu_ul.hide();
+			    menu_a.click(function(e) {
+			        e.preventDefault();
+			        if(!$(this).hasClass('active')) {
+			            menu_a.removeClass('active');
+			            menu_ul.filter(':visible').slideUp('normal');
+			            $(this).addClass('active').next().stop(true,true).slideDown('normal');
+			        } else {
+			            $(this).removeClass('active');
+			            $(this).next().stop(true,true).slideUp('normal');
+			        }
+			    });
+
+			});
+                </script>
+                <!---->
+                <div class="product-middle">
+
+                    <div class="fit-top">
+                        <h6 class="shop-top">Lorem Ipsum</h6>
+                        <a href="#" class="shop-now">SHOP NOW</a>
+                        <div class="clearfix"> </div>
+                    </div>
+                </div>
+                <div class="sellers">
+                    <div class="of-left-in">
+                        <h3 class="tag">Tags</h3>
+                    </div>
+                    <div class="tags">
+                        <ul>
+                            <li><a href="#">design</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">dress</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">dress</a></li>
+                            <li><a href="#">design</a></li>
+                            <li><a href="#">dress</a></li>
+                            <li><a href="#">design</a></li>
+                            <li><a href="#">fashion</a></li>
+                            <li><a href="#">lorem</a></li>
+                            <li><a href="#">dress</a></li>
+                        </ul>
+
+                    </div>
+
+                </div>
+                <!---->
+            </div>
+            @RenderBody()
         </div>
     </div>
-
-    <!--content-->
-    @RenderBody()
+    <!--//content-->
     <div class="footer">
         <div class="container">
             <div class="footer-top-at">
@@ -120,6 +193,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li><a href="#"><i class="twitter"> </i></a></li>
                         <li><a href="#"><i class="rss"> </i></a></li>
                         <li><a href="#"><i class="gmail"> </i></a></li>
+
                     </ul>
                 </div>
                 <div class="col-md-4 amet-sed">
@@ -142,3 +216,4 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
 </body>
 </html>
+
