--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
@@ -1,22 +1,31 @@
 ﻿@using NguyenHoangLaptop.Models;
 @model IEnumerable<SanPham>
+
 @{
     ViewBag.Title = "SanPham";
-    Layout = "~/Views/Layout/_HomeLayout.cshtml";
+    Layout = "~/Views/Layout/_ProductLayout.cshtml";
 }
 
-@{IEnumerable<SanPham> lstLaptopDell = (IEnumerable<SanPham>)ViewBag.ListDell; }
-@{IEnumerable<SanPham> lstLaptopHP = (IEnumerable<SanPham>)ViewBag.ListHP; }
-<div class="content">
-    <div class="container">
-        <h1>Laptop Dell</h1>
-        @Html.Partial("SanPhamPartial", lstLaptopDell)
+<div class="col-md-9 product1">
+    <div class=" bottom-product">
+        @*load sản phẩm*@
+        @foreach (var item in Model.OrderBy(n => n.DonGia))
+        {
+            <div class="col-md-4 bottom-cd simpleCart_shelfItem">
+                <div class="product-at ">
+                    <a href="@Url.Action("ChiTietSanPham","SanPham",new { @id=item.MaSP})">
+                        <img class="img-responsive" src="@Url.Content("~/Content/trangweb/images/"+item.HinhAnh)">
+                        <div class="pro-grid">
+                            <span class="buy-in">Mua Ngay</span>
+                        </div>
+                    </a>
+                </div>
+                <p class="tun">@item.TenSP</p>
+                <a href="#" class="item_add"><p class="number item_price"><i> </i>@item.DonGia.Value.ToString("#,##") VNĐ</p></a>
+            </div>
+        }
     </div>
+    <div class="clearfix"> </div>
 </div>
 
-<div class="content">
-    <div class="container">
-        <h1>Laptop HP</h1>
-        @Html.Partial("SanPhamPartial", lstLaptopHP)
-    </div>
-</div>
+
