--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPhamPartial.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPhamPartial.cshtml
@@ -5,7 +5,7 @@
 @foreach (var item in Model)
 {
     <div class="col-md-4 grid-top">
-        <a href="single.html" class="b-link-stripe b-animate-go  thickbox">
+        <a href="@Url.Action("ChiTietSanPham","SanPham",new {id=item.MaSP })" class="b-link-stripe b-animate-go  thickbox">
             <img class="img-responsive" src="@Url.Content("~/Content/trangweb/images/"+item.HinhAnh)" alt="">
             <div class="b-wrapper">
                 <h3 class="b-animate b-from-left    b-delay03 ">
@@ -13,6 +13,6 @@
                 </h3>
             </div>
         </a>
-        <p><a href="single.html">@item.DonGia</a></p>
+        <p><a href="@Url.Action("ChiTietSanPham","SanPham",new {id=item.MaSP })">Giá Tiền: @item.DonGia.Value.ToString("#,##") VNĐ</a></p>
     </div>
 }
