--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/Index.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/Index.cshtml
@@ -11,12 +11,13 @@
 }
 
 <div class="content">
-    <div class="container">
+    <div class="container" style="margin-top:15px;">
         <h1>Laptop Dell</h1>
         @Html.Partial("~/Views/SanPham/SanPhamPartial.cshtml", lstLaptopDell)
     </div>
 </div>
-<div class="content">
+<br />
+<div class="content" style="margin-bottom:15px;">
     <div class="container">
         <h1>Laptop HP</h1>
         @Html.Partial("~/Views/SanPham/SanPhamPartial.cshtml", lstLaptopHP)
