--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
@@ -16,7 +16,7 @@
                     <a href="@Url.Action("ChiTietSanPham","SanPham",new { @id=item.MaSP})">
                         <img class="img-responsive" src="@Url.Content("~/Content/trangweb/images/"+item.HinhAnh)">
                         <div class="pro-grid">
-                            <span class="buy-in">Mua Ngay</span>
+                            <span class="buy-in">Chi Tiết</span>
                         </div>
                     </a>
                 </div>
