--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="header-left">
                     <ul>
                         <li><a href="login.html">Login</a></li>
-                        <li><a href="register.html">Register</a></li>
+                        <li><a href="@Url.Action("DangKy","Home")">Đăng Ký</a></li>
 
                     </ul>
                     <div class="cart box_1">
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <div class="total">
                                     <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
                                 </div>
-                                <img src="images/cart.png" alt="" />
+                                <img src="~/Content/trangweb/images/cart.png" alt="" />
                             </h3>
                         </a>
                         <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
