--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
@@ -46,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="header-left">
                     <ul>
                         <li><a class="lock" href="login.html">Login</a></li>
-                        <li><a class="lock" href="register.html">Register</a></li>
+                        <li><a class="lock" href="@Url.Action("DangKy","Home")">Đăng Ký</a></li>
                         <li>
                         </li>
 
@@ -84,7 +84,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="product">
         <div class="container">
             <div class="col-md-3 product-price">
-
                 <div class=" rsidebar span_1_of_left">
                     <div class="of-left">
                         <h3 class="cate">Danh Mục Sản Phẩm</h3>
@@ -93,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li class="item1">
                             <a href="#">Laptop Dell </a>
                             <ul class="cute">
-                                <li class="subitem1"><a href="@Url.Action()">Dell Latitude </a></li>
+                                <li class="subitem1"><a href="#">Dell Latitude </a></li>
                                 <li class="subitem2"><a href="#">Dell Precision </a></li>
                                 <li class="subitem3"><a href="#">Dell Inspiron </a></li>
                             </ul>
@@ -110,27 +109,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
                 <!--initiate accordion-->
                 <script type="text/javascript">
-			$(function() {
-			    var menu_ul = $('.menu > li > ul'),
-			           menu_a  = $('.menu > li > a');
-			    menu_ul.hide();
-			    menu_a.click(function(e) {
-			        e.preventDefault();
-			        if(!$(this).hasClass('active')) {
-			            menu_a.removeClass('active');
-			            menu_ul.filter(':visible').slideUp('normal');
-			            $(this).addClass('active').next().stop(true,true).slideDown('normal');
-			        } else {
-			            $(this).removeClass('active');
-			            $(this).next().stop(true,true).slideUp('normal');
-			        }
-			    });
+                    $(function () {
+                        var menu_ul = $('.menu > li > ul'),
+                            menu_a = $('.menu > li > a');
+                        menu_ul.hide();
+                        menu_a.click(function (e) {
+                            e.preventDefault();
+                            if (!$(this).hasClass('active')) {
+                                menu_a.removeClass('active');
+                                menu_ul.filter(':visible').slideUp('normal');
+                                $(this).addClass('active').next().stop(true, true).slideDown('normal');
+                            } else {
+                                $(this).removeClass('active');
+                                $(this).next().stop(true, true).slideUp('normal');
+                            }
+                        });
 
-			});
+                    });
                 </script>
                 <!---->
                 <div class="product-middle">
-
                     <div class="fit-top">
                         <h6 class="shop-top">Lorem Ipsum</h6>
                         <a href="#" class="shop-now">SHOP NOW</a>
@@ -156,15 +154,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <li><a href="#">lorem</a></li>
                             <li><a href="#">dress</a></li>
                         </ul>
-
                     </div>
-
+                    <div class="product-bottom"></div>
+                    <div class=" per1"></div>
                 </div>
                 <!---->
             </div>
-            @RenderBody()
-        </div>
+        @RenderBody()
     </div>
+</div>
     <!--//content-->
     <div class="footer">
         <div class="container">
