Thêm trang đăng nhập
sửa lại view 1 vài chỗ css,js

--- a/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
@@ -19,7 +19,7 @@ ul{
 	padding: 0;
 	margin: 0;	
 }
-h1,h2,h3,h4,h5,h6,label,p{
+h2,h3,h4,h5,h6,label,p{
 	margin:0;	
 }
 /*----*/
@@ -184,7 +184,7 @@ a.item_add {
 /*--banner--*/
 
 .banner{
-	background: url(../images/1.jpg) no-repeat ;
+	background: url(../images/anhnen.jpg) no-repeat ;
 	background-size: cover;
 	width:100%;
 	min-height: 560px;
