--- a/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/memenu.css
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/memenu.css
@@ -117,9 +117,9 @@ skyblue .mepanel img:hover,.skyblue form.contact input[type="text"]:focus,.skybl
 }
 /* start memenu colors */
 
-.skyblue li a.color1:hover{
-	background:#EF5F21;
-	color: #ffffff;
+.skyblue li a.color1:hover {
+    background: #4d88ff;
+    color: #ffffff;
 }
 .skyblue li a.color2:hover{
 	background:#589D3E;
