--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Web Bán Laptop Uy Tín Nguyễn Hoàng</title>
+    <title>NguyenHoang Laptop xin kính chào quý khách</title>
     <link href="~/Content/trangweb/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="~/Content/trangweb/js/jquery.min.js"></script>
@@ -32,37 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
     <!--header-->
     <div class="header">
-        <div class="header-top">
-            <div class="container">
-                <div class="search">
-                    <form>
-                        <input type="text" value="Search " onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
-                        <input type="submit" value="Go">
-                    </form>
-                </div>
-                <div class="header-left">
-                    <ul>
-                        <li><a href="login.html">Login</a></li>
-                        <li><a href="@Url.Action("DangKy","Home")">Đăng Ký</a></li>
-
-                    </ul>
-                    <div class="cart box_1">
-                        <a href="checkout.html">
-                            <h3>
-                                <div class="total">
-                                    <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
-                                </div>
-                                <img src="~/Content/trangweb/images/cart.png" alt="" />
-                            </h3>
-                        </a>
-                        <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
+        @Html.Partial("~/Views/Layout/_HeaderTopPartial.cshtml")
         <div class="container">
             <div class="head-top">
                 <div class="logo">
@@ -76,7 +46,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <div class="banner">
         <div class="container">
-            <script src="~/Content/trangweb/responsiveslides.min.js"></script>
+            <script src="~/Content/trangweb/js/responsiveslides.min.js"></script>
             <script>
                 $(function () {
                     $("#slider").responsiveSlides({
@@ -88,6 +58,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     });
                 });
             </script>
+            <div id="top" class="callbacks_container">
+                <ul class="rslides" id="slider">
+                    <li>
+
+                        <div class="banner-text">
+                            <img src="~/Content/trangweb/images/slide1.jpg" alt="">
+                            <h2>Sản phẩm chất lượng</h2>
+                        </div>
+
+                    </li>
+                    <li>
+
+                        <div class="banner-text">
+                            <img src="~/Content/trangweb/images/slide2.jpg" alt="">
+                            <h2>Chúng tôi luôn có những dịch vụ tốt nhất</h2>
+
+                        </div>
+
+                    </li>
+                    <li>
+                        <div class="banner-text">
+                            <img src="~/Content/trangweb/images/slide3.jpg" alt="">
+                            <h2>Hãy đến với chúng tôi NguyenHoang Laptop</h2>
+
+                        </div>
+
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </div>
 
