--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-    <title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Signle :: w3layouts</title>
+    <title>NguyenHoang Laptop xin kính chào quý khách</title>
     <link href="~/Content/trangweb/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="~/Content/trangweb/js/jquery.min.js"></script>
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- start menu -->
     <link href="~/Content/trangweb/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="~/Content/trangweb/js/memenu.js"></script>
-    <script>$(document).ready(function(){$(".memenu").memenu();});</script>
+    <script>$(document).ready(function () { $(".memenu").memenu(); });</script>
 
 
     <script src="~/Content/trangweb/js/main.js"></script>
@@ -35,45 +35,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
     <!--header-->
     <div class="header">
-        <div class="header-top">
-            <div class="container">
-                <div class="search">
-                    <form>
-                        <input type="text" value="Search " onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
-                        <input type="submit" value="Go">
-                    </form>
-                </div>
-                <div class="header-left">
-                    <ul>
-                        <li><a class="lock" href="login.html">Login</a></li>
-                        <li><a class="lock" href="@Url.Action("DangKy","Home")">Đăng Ký</a></li>
-                        <li>
-                        </li>
-
-                    </ul>
-                    <div class="cart box_1">
-                        <a href="checkout.html">
-                            <h3>
-                                <div class="total">
-                                    <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)
-                                </div>
-                                <img src="~/Content/trangweb/images/cart.png" alt="" />
-                            </h3>
-                        </a>
-                        <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
-
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
+        @Html.Partial("~/Views/Layout/_HeaderTopPartial.cshtml")
         <div class="container">
             <div class="head-top">
                 <div class="logo">
                     <a href="@Url.Action("Index","Home")"><img src="~/Content/trangweb/images/logo.png" alt=""></a>
                 </div>
-                @Html.Action("MenuPartial","Home")
+                @Html.Action("MenuPartial", "Home")
                 <div class="clearfix"> </div>
             </div>
         </div>
