Chỉnh sửa lại đăng ký
thêm table nhaplaimatkhau
so sánh 2 mật khẩu
đẫ thêm thành viên thành công

--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/DangKy.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/DangKy.cshtml
@@ -11,38 +11,47 @@
         <h1>Đăng Ký</h1>
         @using (Html.BeginForm())
         {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
             <div class="col-md-6 register-top-grid">
                 <h3>Thông Tin Tài Khoản</h3>
                 <div>
                     <span>Tài Khoản</span>
                     @Html.TextBoxFor(model=>model.TaiKhoan)
+                    @Html.ValidationMessageFor(model => model.TaiKhoan)
                 </div>
                 <div>
                     <span>Họ Tên</span>
                     @Html.TextBoxFor(model=>model.HoTen)
+                    @Html.ValidationMessageFor(model => model.HoTen)
                 </div>
                 <div>
                     <span>Địa Chỉ</span>
                     @Html.TextBoxFor(model=>model.DiaChi)
+                    @Html.ValidationMessageFor(model=>model.DiaChi)
                 </div>
                 <div>
                     <span>Email</span>
-                    @Html.TextBoxFor(model=>model.Email)
+                    @Html.TextBoxFor(model => model.Email)
+                    @Html.ValidationMessageFor(model => model.Email)
                 </div>
                 <div>
                     <span>Số Điện Thoại</span>
-                    @Html.TextBoxFor(model=>model.SoDienThoai)
+                    @Html.TextBoxFor(model => model.SoDienThoai)
+                    @Html.ValidationMessageFor(model => model.SoDienThoai)
                 </div>
             </div>
             <div class="col-md-6 register-bottom-grid">
                 <h3>Thông Tin Đăng Nhập</h3>
                 <div>
                     <span>Mật khẩu</span>
-                    @Html.PasswordFor(model=>model.MatKhau)
+                    @Html.PasswordFor(model => model.MatKhau)
+                    @Html.ValidationMessageFor(model => model.MatKhau)
                 </div>
                 <div>
                     <span>Nhập lại mật khẩu</span>
-                    @Html.PasswordFor(model => model.MatKhau)
+                    @Html.PasswordFor(model => model.NhapLaiMatKhau)
+                    @Html.ValidationMessageFor(model => model.NhapLaiMatKhau)
                 </div>
                 <div>
                     <span>Câu hỏi bí mật</span>
@@ -53,7 +62,7 @@
                     @Html.TextBoxFor(model=>model.CauTraLoi)
                 </div>
                 <div>
-                    @Html.Captcha(10)
+                    @Html.MathCaptcha()
                 </div>
                 <input type="submit" value="Đăng Ký">
             </div>
