Sửa lại giỏ hàng
Dùng ajax thêm sp không load lại trang
Mới thêm ajax ở phần sản phẩm

--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/GioHang/GioHangPartial.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/GioHang/GioHangPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="cart box_1">
+﻿<div id="giohang" class="cart box_1">
     <a href="@Url.Action("XemGioHang","GioHang")">
         <h3>
             <div class="total">
