--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
@@ -26,9 +26,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- start menu -->
     <link href="~/Content/trangweb/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="~/Content/trangweb/js/memenu.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script>$(document).ready(function () { $(".memenu").memenu(); });</script>
-
-
     <script src="~/Content/trangweb/js/main.js"></script>
     <script src="~/Content/trangweb/js/simpleCart.min.js"></script>
 </head>
