--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/GioHang/XemGioHang.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/GioHang/XemGioHang.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "XemGioHang";
     Layout = "~/Views/Layout/_HomeLayout.cshtml";
 }
-
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 @if (Model == null || Model.Count == 0)
 {
     <h1>Giỏ hàng rỗng</h1>
