--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/SanPham/SanPham.cshtml
@@ -1,5 +1,7 @@
 ﻿@using NguyenHoangLaptop.Models;
-@model IEnumerable<SanPham>
+@using PagedList.Mvc;
+
+@model PagedList.IPagedList<SanPham>
 
 @{
     ViewBag.Title = "SanPham";
@@ -22,11 +24,15 @@
                 </div>
                 <p class="tun">@item.TenSP</p>
                 <a href="@Url.Action("ThemGioHang","GioHang",new {@MaSP=item.MaSP,@strUrl=Request.Url.ToString()})" class="item_add"><p class="number item_price"><i> </i>@item.DonGia.Value.ToString("#,##") VNĐ</p></a>
-                @Ajax.ActionLink("Thêm vào giỏ hàng","ThemSanPhamGioHang","GioHang",new { @MaSP = item.MaSP, @strUrl = Request.Url.ToString()},new AjaxOptions { HttpMethod="Get",UpdateTargetId="giohang",InsertionMode=InsertionMode.Replace},new {@class="number item_price" })
+                @Ajax.ActionLink("Thêm vào giỏ hàng", "ThemSanPhamGioHang", "GioHang", new { @MaSP = item.MaSP, @strUrl = Request.Url.ToString() }, new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "giohang", InsertionMode = InsertionMode.Replace }, new { @class = "number item_price" })
             </div>
         }
     </div>
     <div class="clearfix"> </div>
 </div>
 
-
+@**@
+<div>
+    Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
+    @Html.PagedListPager(Model, page => Url.Action("SanPham", new { page = page, @MaLoaiSP = ViewBag.MaLoaiSP, @MaNSX = ViewBag.MaNSX }))
+</div>
