--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_AdminLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_AdminLayout.cshtml
@@ -166,42 +166,42 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h3>Featured</h3>
                 <ul>
                     <li><a href="#"><i class="chat"></i></a></li>
-                    <li><a href="#">Charts</a></li>
+                    <li><a href="@Url.Action("Index","QuanLySanPham")">Quản Lí Sản Phẩm</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="art"></i></a></li>
-                    <li><a href="#">Articals</a></li>
+                    <li><a href="@Url.Action("NhapHang","QuanLyPhieuNhap")">Nhập Thêm Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="user"></i></a></li>
-                    <li><a href="#">Users</a></li>
+                    <li><a href="@Url.Action("DSSPHetHang", "QuanLyPhieuNhap")">SP Sắp Hết Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="fat"></i></a></li>
-                    <li><a href="#">Favorites</a></li>
+                    <li><a href="@Url.Action("ChuaThanhToan", "QuanLyDonHang")">Quản Lí Đơn Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="speed"></i></a></li>
-                    <li><a href="#">Speed</a></li>
+                    <li><a href="@Url.Action("Index", "PhanQuyen")">Phân Quyền</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="setting"></i></a></li>
-                    <li><a href="#">Settings</a></li>
+                    <li><a href="@Url.Action("Index", "Quyen")">Quản Lí Quyền</a></li>
                 </ul>
             </div>
             <div class="navigation">
                 <h3>Navigation</h3>
                 <ul>
                     <li><a href="#"><i class="dash"></i></a></li>
-                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Thêm Loại Laptop Mới</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="mail"></i></a></li>
-                    <li><a href="#">Emails</a></li>
+                    <li><a href="#">Quản Lí Bình Luận</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="cal"></i></a></li>
-                    <li><a href="#">Calendar</a></li>
+                    <li><a href="#">Quản Lí Banner</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="page"></i></a></li>
