--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_HomeLayout.cshtml
@@ -64,29 +64,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </ul>
                 </div>
                 <div class="col-md-4 amet-sed ">
-                    <h4>CONTACT US</h4>
+                    <h4>Liên Hệ Với Chúng Tôi</h4>
 
                     <p>
-                        Contrary to popular belief
+                        Qua 2 anh quản lí
                     </p>
-                    <p>The standard chunk</p>
-                    <p>office:  +12 34 995 0792</p>
-                    <ul class="social">
-                        <li><a href="#"><i> </i></a></li>
-                        <li><a href="#"><i class="twitter"> </i></a></li>
-                        <li><a href="#"><i class="rss"> </i></a></li>
-                        <li><a href="#"><i class="gmail"> </i></a></li>
-                    </ul>
+                    <p>Quản Lí 1: Thái-shorturl.at/abczF </p>
+                    <p>Quản Lí 2: Hiếu-shorturl.at/apRY3</p>
                 </div>
                 <div class="col-md-4 amet-sed">
-                    <h4>Newsletter</h4>
+                    <h4>Thư Mới</h4>
                     <p>
-                        Sign Up to get all news update
-                        and promo
+                        Để Lại Thông Để Nhận Thêm Thông Tin Ưu Đãi
                     </p>
                     <form>
                         <input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
-                        <input type="submit" value="Sign up">
+                        <input type="submit" value="Gửi">
                     </form>
                 </div>
                 <div class="clearfix"> </div>
